2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/pascal.lang:
	Add downto highlight. Fixes bug #563271.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/dtd.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/m4.lang:
	* gtksourceview/language-specs/changelog.lang:
	* gtksourceview/language-specs/xslt.lang:
	* gtksourceview/language-specs/makefile.lang:
	* gtksourceview/language-specs/gap.lang:
	* gtksourceview/language-specs/yacc.lang:
	Mark strings for translation.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/vala.lang:
	* gtksourceview/language-specs/xslt.lang:
	Mark string for translation.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/dot.lang:
	Mark string for translation.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/gtk-doc.lang:
	Added the "Deprecated" word to gtk-doc.

2008-12-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Removed check.

2008-12-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceview.h:
	Added non-breaking spaces drawing.

2008-11-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceiter.c: (forward_chars_with_skipping):
	call g_utf8_casefold() before normalizing, to match behavior
	of the search code. Bug #496780.
	* tests/test-widget.c: added Find command.

=== gtksourceview 2.4.1 ===

2008-11-01  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.4.1

2008-11-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: add some missing keywords
	Bug #556278, patch by Søren Hauberg.

2008-10-29  Paolo Borelli  <pborelli@katamail.com>
