@@ -1,3 +1,8 @@
+2008-12-10  Paolo Borelli  <paolo.borelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguage.c: fix cut and paste error
+	causing wrong values in gobject properties. Bug #564142. 
+
 2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/language-specs/pascal.lang:
